# db-assist

./: README.md  agent.py  api.py  db.json  main.py  package-lock.json  prompt.py  pyproject.toml  tools.py  utils.py
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/: agent.py  api.py  database.py  model.py  prompt.py  schema_store.py  thread_repo.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Chat.jsx  SchemaDisplay.jsx  Sidebar.jsx
